# bibtex-filter

./: .gitignore  README.md  _localization.py  bibtexfilter.py  i18n.json  main.css  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
