[project]
name = "bibtex-filter"
version = "1.0dev"
description = ""
readme = "README.md"
requires-python = ">=3.6"

authors = [
    { name = "" }
]
license.file = "LICENSE"
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "textual",
    "rich",
    "bibtexparser",
]


[project.urls]
repository = "https://github.com/Stingray42/bibtex-filter"

[project.scripts]
bibtex-filter = "bibtexfilter:main"

[build-system]
requires = [
    "setuptools>=64.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "bibtexfilter",
]
include-package-data = true
